add answer div to bottom of index.html with recommendedTrack span, hide answer div from display via css styling

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
         </div>
         <button type="submit" class="btn">Find out your track!</button>
       </form>
+      <div class="answer">
+        <h2>Based on your answers and the will of the gods and goddesses, the track you should choose is <span id="recommendedTrack"></span>. Now what are you waiting for? Apply to your Epicodus track!</h2>
+      </div>
     </div>
   </body>
 </html>
