--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <button type="submit" class="btn">Find out your track!</button>
       </form>
       <div class="answer">
-        <h2>Based on your answers and the will of the gods and goddesses, the track you should choose is <span id="recommendedTrack"></span>. Now what are you waiting for? Apply to your Epicodus track!</h2>
+        <h2>Based on your answers and the will of the gods and goddesses, the track you should choose is <span class="recommendedTrack"></span>. Now what are you waiting for? Apply to your Epicodus track!</h2>
       </div>
     </div>
   </body>
