--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     </div>
     <div class="container">
       <form id="userInput">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4">
+            <div class="form-group">
+              <label class="nameLabel" for="name">First enter your name:</label>
+              <input id="name" class="form-control" type="text">
+            </div>
+          </div>
+        </div>
         <h2>What type of work do you think you'd enjoy most?</h2>
         <div class="radio">
           <label>
@@ -105,7 +113,7 @@
         </div>
       </form>
       <div class="answer">
-        <h4>Based on your answers and the will of the gods and goddesses, the track you should choose is <span class="recommendedTrack"></span>. Now what are you waiting for? Apply to your Epicodus track!</h4>
+        <h4>Hey <span class="name"></span>. Based on your answers and the will of the gods and goddesses, the track you should choose is <span class="recommendedTrack"></span>. Now what are you waiting for? Apply to your Epicodus track!</h4>
       </div>
     </div>
   </body>
