--- a/index.html
+++ b/index.html
@@ -112,8 +112,26 @@
           <button type="submit" class="btn">Find out your track!</button>
         </div>
       </form>
-      <div class="answer">
-        <h4>Hey <span class="name"></span>. Based on your answers and the will of the gods and goddesses, the track you should choose is <span class="recommendedTrack"></span>. Now what are you waiting for? Apply to your Epicodus track!</h4>
+      <div class="recommendDesign">
+        <div class="photos">
+          <img src="" alt="">
+        </div>
+        <h4>Hey <span class="name"></span>. Based on your answers the track you should choose is CSS/Design. Now what are you waiting for? Apply to your Epicodus track!</h4>
+      </div>
+      <div class="recommendRuby">
+        <div class="photos">
+          <img src="" alt="">
+        </div>
+        <h4>Hey <span class="name"></span>. Based on your answers the track you should choose is Ruby/Rails. Now what are you waiting for? Apply to your Epicodus track!</h4>
+      </div>
+      <div class="recommendPhp">
+        <div class="photos">
+          <img src="" alt="">
+        </div>
+        <h4>Hey <span class="name"></span>. Based on your answers the track you should choose is PHP/Drupal. Now what are you waiting for? Apply to your Epicodus track!</h4>
+      </div>
+      <div class="recommendOther">
+        <h4>Hey <span class="name"></span>. Based on your answers you either have interests all across the board or just don't want to waste time with this quiz. Take some time and think it over and then apply to an Epicodus track.</h4>
       </div>
     </div>
   </body>
