add images to recommend divs, add row and columns to recommend divs, style images and text for recommend divs in css.

--- a/index.html
+++ b/index.html
@@ -112,26 +112,47 @@
           <button type="submit" class="btn">Find out your track!</button>
         </div>
       </form>
-      <div class="recommendDesign">
-        <div class="photos">
-          <img src="" alt="">
+      <div class="row">
+        <div class="recommendDesign">
+          <div class="col-md-3">
+            <div class="photos">
+              <img src="img/css.jpg" alt="CSS logo">
+            </div>
+          </div>
+          <div class="col-md-9">
+            <h4>Hey <span class="name"></span>. Based on your answers the track you should choose is CSS/Design. Now what are you waiting for? Apply to your Epicodus track!</h4>
+          </div>
         </div>
-        <h4>Hey <span class="name"></span>. Based on your answers the track you should choose is CSS/Design. Now what are you waiting for? Apply to your Epicodus track!</h4>
-      </div>
-      <div class="recommendRuby">
-        <div class="photos">
-          <img src="" alt="">
+        <div class="recommendRuby">
+          <div class="col-md-3">
+            <div class="photos">
+              <img src="img/ruby.png" alt="Ruby on Rails logo">
+            </div>
+          </div>
+          <div class="col-md-9">
+            <h4>Hey <span class="name"></span>. Based on your answers the track you should choose is Ruby/Rails. Now what are you waiting for? Apply to your Epicodus track!</h4>
+          </div>
         </div>
-        <h4>Hey <span class="name"></span>. Based on your answers the track you should choose is Ruby/Rails. Now what are you waiting for? Apply to your Epicodus track!</h4>
-      </div>
-      <div class="recommendPhp">
-        <div class="photos">
-          <img src="" alt="">
+        <div class="recommendPhp">
+          <div class="col-md-3">
+            <div class="photos">
+              <img src="img/drupal.png" alt="Drupal logo">
+            </div>
+          </div>
+          <div class="col-md-9">
+            <h4>Hey <span class="name"></span>. Based on your answers the track you should choose is PHP/Drupal. Now what are you waiting for? Apply to your Epicodus track!</h4>
+          </div>
         </div>
-        <h4>Hey <span class="name"></span>. Based on your answers the track you should choose is PHP/Drupal. Now what are you waiting for? Apply to your Epicodus track!</h4>
-      </div>
-      <div class="recommendOther">
-        <h4>Hey <span class="name"></span>. Based on your answers you either have interests all across the board or just don't want to waste time with this quiz. Take some time and think it over and then apply to an Epicodus track.</h4>
+        <div class="recommendOther">
+          <div class="col-md-3">
+            <div class="photos">
+              <img src="img/question.jpg" alt="Question mark">
+            </div>
+          </div>
+          <div class="col-md-9">
+            <h4>Hey <span class="name"></span>. Based on your answers you either have interests all across the board or just don't want to waste time with this quiz. Take some time and think it over and then apply to an Epicodus track.</h4>
+          </div>
+        </div>
       </div>
     </div>
   </body>
